--- a/Mobile/nbproject/project.properties
+++ b/Mobile/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Mobile
@@ -30,7 +31,6 @@ file.reference.native-internal_tmp=native/internal_tmp
 file.reference.CLDC11.jar=lib/CLDC11.jar
 file.reference.CodenameOne.jar=lib/CodenameOne.jar
 file.reference.CodenameOne_SRC.zip=lib/CodenameOne_SRC.zip
-file.reference.Mobile-override=override
 file.reference.impl-cls=lib/impl/cls
 file.reference.impl-stubs=lib/impl/stubs
 file.reference.JavaSE.jar=JavaSE.jar
@@ -40,7 +40,6 @@ javac.classpath=\
     ${file.reference.CLDC11.jar}:\
     ${file.reference.CodenameOne.jar}:\
     ${file.reference.CodenameOne_SRC.zip}:\
-    ${file.reference.Mobile-override}:\
     ${file.reference.impl-cls}:\
     ${file.reference.impl-stubs}
 # Space-separated list of extra javac options
