--- a/Mobile/nbproject/project.properties
+++ b/Mobile/nbproject/project.properties
@@ -34,6 +34,8 @@ file.reference.CodenameOne_SRC.zip=lib/CodenameOne_SRC.zip
 file.reference.impl-cls=lib/impl/cls
 file.reference.impl-stubs=lib/impl/stubs
 file.reference.JavaSE.jar=JavaSE.jar
+file.reference.restfb-1.32.0.jar=C:\\Users\\admin\\Downloads\\restfb-1.32.0.jar
+file.reference.yahoo-weather-java-api-2.0.2.jar=C:\\Users\\admin\\Desktop\\lib\\yahoo-weather-java-api-2.0.2.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -41,7 +43,9 @@ javac.classpath=\
     ${file.reference.CodenameOne.jar}:\
     ${file.reference.CodenameOne_SRC.zip}:\
     ${file.reference.impl-cls}:\
-    ${file.reference.impl-stubs}
+    ${file.reference.impl-stubs}:\
+    ${file.reference.yahoo-weather-java-api-2.0.2.jar}:\
+    ${file.reference.restfb-1.32.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
