--- a/Mobile/nbproject/project.properties
+++ b/Mobile/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.impl-cls=lib/impl/cls
 file.reference.impl-stubs=lib/impl/stubs
 file.reference.JavaSE.jar=JavaSE.jar
 file.reference.restfb-1.32.0.jar=C:\\Users\\admin\\Downloads\\restfb-1.32.0.jar
+file.reference.restfb-2.4.0.jar=..\\jar\\restfb-2.4.0.jar
 file.reference.yahoo-weather-java-api-2.0.2.jar=C:\\Users\\admin\\Desktop\\lib\\yahoo-weather-java-api-2.0.2.jar
 includes=**
 jar.compress=true
@@ -45,7 +46,8 @@ javac.classpath=\
     ${file.reference.impl-cls}:\
     ${file.reference.impl-stubs}:\
     ${file.reference.yahoo-weather-java-api-2.0.2.jar}:\
-    ${file.reference.restfb-1.32.0.jar}
+    ${file.reference.restfb-1.32.0.jar}:\
+    ${file.reference.restfb-2.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +58,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${file.reference.JavaSE.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.restfb-2.4.0.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
