--- a/Mobile/codenameone_settings.properties
+++ b/Mobile/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Sun May 06 22:01:31 GMT+01:00 2018
+#Mon May 07 09:42:32 GMT+01:00 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
@@ -25,6 +25,7 @@ codename1.android.keystore=
 codename1.arg.ios.pods=,GoogleMaps
 codename1.vendor=CodenameOne
 codename1.arg.win.ver=8
+codename1.arg.ios.locationUsageDescription=Some functionality of the application depends on your location
 codename1.arg.android.playService.maps=true
 codename1.ios.certificatePassword=
 codename1.ios.debug.certificatePassword=
