--- a/Mobile/nbproject/project.properties
+++ b/Mobile/nbproject/project.properties
@@ -48,7 +48,8 @@ javac.classpath=\
     ${file.reference.CodenameOne_SRC.zip}:\
     ${file.reference.impl-cls}:\
     ${file.reference.impl-stubs}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.restfb-2.4.0.jar}
     ${file.reference.restfb-1.32.0.jar}
 =======
     ${file.reference.yahoo-weather-java-api-2.0.2.jar}:\
