--- a/Mobile/codenameone_settings.properties
+++ b/Mobile/codenameone_settings.properties
@@ -1,5 +1,5 @@
 #
-#Sun May 20 16:04:54 GMT+01:00 2018
+#Mon May 21 02:50:46 WAT 2018
 codename1.ios.appid=Q5GHSKAL2F.com.mycompany.myapp
 codename1.ios.release.provision=
 codename1.arg.java.version=8
